# sql-agentic-ai

./: .env.example  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
sql/: init.sql
