[project]
name = "mcp-db-access"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.29",
    "psycopg2-binary>=2.9.10",
    "pyodbc>=5.2.0",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.35.0",
]
